# s21_SmartCalc

./: README.md
src/: Makefile  credit_calc.c  credit_calc.h  deposit_calc.c  deposit_calc.h  doxconf  polish_notation.c  polish_notation.h  s21_smart_calc.c  s21_smart_calc.h
src/s21_smart_calc/: CMakeLists.txt  graphwindow.cpp  graphwindow.h  graphwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_smart_calc_ru_RU.ts
src/tests/: notation_test.c
